checker/tests/parsing/errors/missing_colon.mft
type T {
  f Bar;
}
=== error ===
Unrecognized token `Bar` found at 13:16
Expected one of ":"